# solidhunter-vscode

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: extension.ts
linter-wrapper/: Cargo.toml
linter-wrapper/src/: lib.rs
server/: package-lock.json  package.json
server/src/: linter.ts  server.ts
src/: main.rs
