[package]
name = "solidhunter-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
ropey = "1.3.2"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0"}
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
im-rc = "15.0.0"
solidhunter-lib = {git ="https://github.com/astrodevs-labs/solidhunter", branch="fix/extention-fixes"}
glob = "0.3.0"


[debug]
incremental = true
