[package]
name = "linter_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffi = "0.0.2"
libc = "0.2.138"
solidhunter-lib = {git= "https://github.com/astrodevs-labs/solidhunter", branch="fix/extention-fixes"}
